<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:id="@+id/uilogin"
    tools:context=".UI.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
